--- a/14_creative-border-swapping-button/index.html
+++ b/14_creative-border-swapping-button/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>CSS Animatios Button Example</title>
-    <link href="https://fonts.googleapis.com/css?family=Robot:100,300,400,900" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" media="all" />
 </head>
 
 <body>
-    <button>button</button>
+    <button class="btn">hover me</button>
 </body>
 
 </html>
